feat: rename twitter

--- a/src/browser/app/editor/editor.component.html
+++ b/src/browser/app/editor/editor.component.html
@@ -239,7 +239,7 @@
           <mat-hint
             >输入标签的相关链接，如指向{{
               ((inputs.namespace | async) || (original.namespace | async)) === 'artist'
-                ? '画师的微博、pixiv、Twitter 或个人主页'
+                ? '画师的微博、pixiv、X 或个人主页'
                 : ((inputs.namespace | async) || (original.namespace | async)) === 'group'
                   ? '社团或公司的官方网站'
                   : ((inputs.namespace | async) || (original.namespace | async)) === 'parody'
