build: update deps

--- a/src/browser/app/editor/editor.component.html
+++ b/src/browser/app/editor/editor.component.html
@@ -15,7 +15,7 @@
           raw: value('raw'),
           name: value('name'),
           intro: value('intro'),
-          links: value('links')
+          links: value('links'),
         }"
       >
         <mat-icon>content_copy</mat-icon>
